--- a/one/Cargo.toml
+++ b/one/Cargo.toml
@@ -5,10 +5,10 @@ resolver = "1"
 version = "0.1.0"
 
 # [features]
-# bb = ["two/hex"]
+# activate_hex = ["two/hex"]
 
 [dependencies]
 two = { path = "../two" }
 
 [patch.crates-io]
-hex = { path = "../hex" }
+hex = { path = "../hex_patch" }
